# multi-tool-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py  tools_config.yaml
examples/: basic_query.py  comparison_demo.py  multi_step.py
src/: __init__.py
src/agent/: __init__.py  agent.py  executor.py  memory.py  router.py
src/llm/: __init__.py  client.py  prompts.py
src/logging/: __init__.py  formatters.py  logger.py
src/tools/: __init__.py  base.py  calculator.py  search.py  weather.py
tests/: test_agent.py  test_comparison.py  test_tools.py
